WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278668
Unreviewed VisionPro build fix after
282743@main
https://bugs.webkit.org/show_bug.cgi?id=278668
Summary
Unreviewed VisionPro build fix after 282743@main
Chris Dumez
Reported
2024-08-26 11:18:26 PDT
VisionPro build fix after
282743@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-08-26 11:18:28 PDT
<
rdar://problem/134716551
>
Chris Dumez
Comment 2
2024-08-26 11:19:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32719
EWS
Comment 3
2024-08-26 11:30:53 PDT
Committed
282752@main
(a7ca1db25882): <
https://commits.webkit.org/282752@main
> Reviewed commits have been landed. Closing PR #32719 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug