Unreviewed VisionPro build fix after 282743@main https://bugs.webkit.org/show_bug.cgi?id=278668 rdar://134716551

* Source/WebKit/UIProcess/RemoteLayerTree/ios/RemoteScrollingCoordinatorProxyIOS.mm:
(WebKit::RemoteScrollingCoordinatorProxyIOS::connectStateNodeLayers):

Canonical link: https://commits.webkit.org/282752@main